Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -141,6 +141,7 @@ University of California, Santa Cruz, CA \\
 \section{Honors, Awards, \& Funded Proposals}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
                     %\item Astrobiology Fellow at University of Washington Astrobiology Program (2014)
+                    \item \textbf{NASA Exoplanet Research Program PI:} \href{https://nspires.nasaprs.com/external/viewrepositorydocument/cmdocumentid=897851/solicitationId=%7B0D14DDFD-D4F8-3D3C-0E3C-5C48EA50B512%7D/viewSolicitationDocument=1/XRP22%20Abstracts.pdf}{``Venus as an Exoplanet: Constructing a Venus Transmission Spectrum from Venus Express Solar Occultation Measurements''} (2022)
                     \item \textbf{JWST Cycle 1 Co-PI:} \href{https://www.stsci.edu/jwst/science-execution/program-information?id=1981}{``Tell Me How I'm Supposed To Breathe With No Air: Measuring the Prevalence and Diversity of M-Dwarf Planet Atmospheres''} (2021)
                     \item \textbf{NASA Group Achievement Award:} LUVOIR Mission Concept Study Team (2019)
                     \item Honors undergraduate thesis in physics (2013)
@@ -154,8 +155,16 @@ University of California, Santa Cruz, CA \\
                     \item Bayesian parameter inference and model selection 
                     \item Version control and collaboration with git \& GitHub
                     \item Data visualization with Matplotlib, Tableau, \& Bokeh  
-                    \item Writing and typesetting with \LaTeX 
+                    \item Writing and typesetting with \LaTeX~ and Overleaf
                     \item Extensive experience with MS Office Suite \\
+                \end{itemize}
+
+\section{Community Service} 
+                \begin{itemize}  \itemsep -1pt %reduce space between items
+                    \item Science Organizing Committee: \href{https://www.stsci.edu/contents/events/stsci/2023/may/planetary-systems-and-the-origins-of-life-in-the-era-of-jwst}{STScI 2023 Spring Symposium} \hfill (Aug 2022 -- present) 
+                    \item Section Co-Editor: ``Handbook of Exoplanets, Second Edition'' \hfill (Mar 2022 -- present) 
+                    \item Participating Member and Task Co-Lead: \href{https://doi.org/10.48550/arXiv.2112.04517}{ExoPAG SAG 22} \hfill (Oct 2020 -- Dec 2021)
+                    \item Reviewer for AAS Journals, MNRAS, Nature Astronomy \hfill (2017 - present)\\
                 \end{itemize}
 
 \section{Publications} 
@@ -170,7 +179,7 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{25}
+                \begin{benumerate}{26}
                     %\item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2022, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item Ahrer, E. M., Stevenson, K. B., Mansfield, M. et al. (2023). \href{https://doi.org/10.1038/s41586-022-05590-4}{``Early Release Science of the exoplanet WASP-39b with JWST NIRCam''}. \textit{Nature} 614, 653-658. 
                     \item Rustamkulov, Z., Sing, D. K., Mukherjee, S. et al. (2023). \href{https://doi.org/10.1038/s41586-022-05677-y}{``Early Release Science of the exoplanet WASP-39b with JWST NIRSpec PRISM''}. \textit{Nature} 614, 659-663. 
@@ -179,6 +188,7 @@ University of California, Santa Cruz, CA \\
                     \item Mandell, A. M., \textbf{Lustig-Yaeger, J.}, Stevenson, K., \& Staguhn, J. (2022). \href{https://doi.org/10.3847/1538-3881/ac83a5}{``MIRECLE: Science Yield for a Mid-IR Explorer-Class Mission to Study Non-Transiting Rocky Planets Orbiting the Nearest M-Stars Using Planetary Infrared Excess''}. \textit{The Astronomical Journal}, 164, 176. 
                     \item Mandt, K., Luspay-Kuti, A., \textbf{Lustig-Yaeger, J.}, Felton, R., \& Domagal-Goldman, S. (2022). \href{https://iopscience.iop.org/article/10.3847/1538-4357/ac59bb}{``TRAPPIST-1h as an Exo-Titan. I. The Role of Assumptions about Atmospheric Parameters in Understanding an Exoplanet Atmosphere''}. \textit{The Astrophysical Journal}, 930(1), 73. 
                     \item Wood, B. E., Hess, P., \textbf{Lustig-Yaeger, J.}, Gallagher, B., Korwan, D., Rich, N., et al. (2022). \href{https://doi.org/10.1029/2021GL096302}{``Parker Solar Probe imaging of the night side of Venus''}. \textit{Geophysical Research Letters}, 49(3), e2021GL096302. 
+                    \item Hinkel, N. R., Pepper, J., Stark, C. C., Burt, J. A., Ciardi, D. R., Hardegree-Ullman, K. K., \textbf{Lustig-Yaeger, J.}, Kopparapu, R., Mishra, L., Molaverdikhani, K., Pascucci, I., et al. (2021). \href{https://doi.org/10.48550/arXiv.2112.04517}{``Final Report for SAG 22: A Target Star Archive for Exoplanet Science''}. \textit{arXiv preprint arXiv}:2112.04517.
                     \item Komacek, T. D., Kang, W., \textbf{Lustig-Yaeger, J.}, \& Olson, S. L. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv210808386K/abstract}{``Constraining the Climates of Rocky Exoplanets''}. \textit{Elements}, 17, 4.
                     \item Mayorga, L. C., \textbf{Lustig-Yaeger, J.}, May, E. M., Sotzen, K. S., Gonzalez-Quiles, J., et al. (2021) \href{https://ui.adsabs.harvard.edu/abs/2021PSJ.....2..140M/abstract}{``Transmission Spectroscopy of the Earth-Sun System to Inform the Search for Extrasolar Life''}. \textit{The Planetary Science Journal}, 2(4), 140. 
                     \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., \& Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
